src/parse.output
   0  $accept : %entry% $end

   1  parseShellAction : shellAction
   2                   | EOF

   3  parseShellActionList : shellActionList

   4  shellActionList : EOF
   5                  | shellAction shellActionList

   6  shellAction : directive SEMISEMI
   7              | pTerm SEMISEMI
   8              | LET binding SEMISEMI
   9              | LIN binding SEMISEMI
  10              | LET REC binding SEMISEMI
  11              | LET EXT binding SEMISEMI
  12              | LET METHOD binding SEMISEMI
  13              | LET DISCONTINUOUS binding SEMISEMI
  14              | TYPE typeBinding SEMISEMI
  15              | DATATYPE type_constant_or_punct simpleBondiTypeList EQUAL datatype WITH addCaseList SEMISEMI
  16              | DATATYPE type_constant_or_punct EQUAL datatype WITH addCaseList SEMISEMI
  17              | DATATYPE type_constant_or_punct simpleBondiTypeList EQUAL datatype SEMISEMI
  18              | DATATYPE type_constant_or_punct EQUAL datatype SEMISEMI
  19              | CLASS tyconstant parameterCommaListOpt extendsOpt LBRACE attributeList WITH addCaseList RBRACE
  20              | CLASS tyconstant parameterCommaListOpt extendsOpt LBRACE attributeList RBRACE

  21  directive : DIRECTIVE_cd STRING
  22            | DIRECTIVE_show L_IDENT
  23            | DIRECTIVE_hide L_IDENT
  24            | DIRECTIVE_quit
  25            | DIRECTIVE_status
  26            | DIRECTIVE_open STRING

  27  typeBinding : type_constant_or_punct EQUAL pType

  28  bindingList : binding
  29              | binding AND bindingList

  30  binding : parameter simpleBondiTermList EQUAL pTerm

  31  parameter : term_id
  32            | parameter COLON pType
  33            | LPAREN parameter RPAREN
  34            | LPAREN infix_op RPAREN

  35  attributeList :
  36                | field attributeList
  37                | methd attributeList

  38  field : parameter SEMICOLON

  39  methd : L_IDENT EQUAL LBRACE pTerm RBRACE
  40        | STATIC REC L_IDENT EQUAL LBRACE pTerm RBRACE
  41        | STATIC EXT L_IDENT EQUAL LBRACE pTerm RBRACE
  42        | STATIC DISCONTINUOUS L_IDENT EQUAL LBRACE pTerm RBRACE
  43        | STATIC L_IDENT EQUAL LBRACE pTerm RBRACE

  44  pInfixTerm : simpleBondiTerm simpleBondiTermList
  45             | MINUS pInfixTerm
  46             | pInfixTerm exp_op pInfixTerm
  47             | pInfixTerm mult_op pInfixTerm
  48             | pInfixTerm add_op pInfixTerm
  49             | pInfixTerm misc_op pInfixTerm
  50             | pInfixTerm OPER pInfixTerm
  51             | OPER pInfixTerm
  52             | NOPER simpleBondiTermList

  53  pRelTerm : pInfixTerm
  54           | pInfixTerm rel_op pInfixTerm

  55  pTerm : pRelTerm
  56        | pTerm BOOL_AND pTerm
  57        | pTerm BOOL_OR pTerm
  58        | IF pTerm THEN pTerm ELSE pTerm
  59        | FUN simpleBondiTermList RARROW pTerm
  60        | LET bindingList IN pTerm
  61        | LET REC binding IN pTerm
  62        | LET EXT binding IN pTerm
  63        | LET METHOD binding IN pTerm
  64        | LET DISCONTINUOUS binding IN pTerm
  65        | patternMatchList
  66        | MATCH pTerm WITH pTerm
  67        | pTerm EQUAL pTerm
  68        | term_id PLUSEQUAL patternMatch
  69        | GENERALISE term_id
  70        | pTerm EQCONS pTerm
  71        | pTerm SEMICOLON pTerm
  72        | SLEEP pTerm
  73        | SPAWN pTerm
  74        | pTerm COLON pType
  75        | NEW tyconstant classParams
  76        | NEWARRAY simpleBondiTerm simpleBondiTerm
  77        | LENGTHV pTerm
  78        | ENTRY LPAREN pTerm COMMA pTerm RPAREN
  79        | WHILE pTerm DO pTerm
  80        | FOR term_id EQUAL pTerm TO pTerm DO pTerm
  81        | pTerm AS pTerm
  82        | VIEW LPAREN pTerm COMMA pTerm RPAREN
  83        | pTerm WHERE pTerm
  84        | ISREF pTerm
  85        | ISARRAY pTerm
  86        | process

  87  simpleBondiTermMethodList :
  88                            | simpleBondiTermList DOT L_IDENT simpleBondiTermMethodList
  89                            | simpleBondiTermList

  90  simpleBondiTermList :
  91                      | simpleBondiTerm simpleBondiTermList

  92  simpleBondiTerm : tyconstant DOT L_IDENT
  93                  | LPAREN pTerm RPAREN
  94                  | BEGIN pTerm END
  95                  | parameter
  96                  | constructor_id
  97                  | LPAREN RPAREN
  98                  | WILDCARD
  99                  | INTEGER
 100                  | FLOAT
 101                  | CHARACTER
 102                  | STRING
 103                  | TRUE
 104                  | FALSE
 105                  | UN
 106                  | REFCONS
 107                  | LBRACKET pTermCommaList RBRACKET
 108                  | LPAREN pTermCommaList RPAREN
 109                  | SUPER DOT L_IDENT
 110                  | BANG simpleBondiTerm
 111                  | simpleBondiTerm COLON pType
 112                  | simpleBondiTerm DOT L_IDENT

 113  process : LPAREN process RPAREN
 114          | process BAR process
 115          | BANG process
 116          | REST nameList IN process
 117          | CPC compoundPattern RARROW pTerm

 118  datumPattern : LPAREN RPAREN
 119               | INTEGER
 120               | FLOAT
 121               | CHARACTER
 122               | STRING
 123               | TRUE
 124               | FALSE
 125               | UN

 126  namePattern : LPAREN namePattern RPAREN
 127              | L_IDENT
 128              | CPCPRO L_IDENT
 129              | CPCBIND L_IDENT
 130              | U_IDENT
 131              | CPCPRO U_IDENT
 132              | datumPattern
 133              | CPCPRO datumPattern

 134  compoundPattern : namePattern
 135                  | LPAREN compoundPattern RPAREN
 136                  | compoundPattern LPAREN compoundPattern RPAREN
 137                  | compoundPattern namePattern
 138                  | compoundPattern COMMA LPAREN compoundPattern RPAREN
 139                  | compoundPattern COMMA namePattern

 140  nameList : L_IDENT
 141           | L_IDENT nameList

 142  patternMatchList : patternMatch
 143                   | patternMatch patternMatchList

 144  patternMatch : BAR pTerm RARROW pTerm
 145               | BAR LBRACE parameterCommaList RBRACE pTerm RARROW pTerm

 146  pTermCommaList :
 147                 | pTerm
 148                 | pTerm COMMA pTermCommaList

 149  parameterCommaList :
 150                     | L_IDENT
 151                     | L_IDENT COMMA parameterCommaList

 152  parameterCommaListOpt :
 153                        | LESSTHAN parameterCommaList GREATERTHAN

 154  extendsOpt : EXTENDS U_IDENT
 155             |

 156  pType : pSumType
 157        | pType misc_op pType
 158        | pType RARROW pType
 159        | allwithvar pType

 160  allwithvar : ALL type_id DOT

 161  pSumType : pProdType
 162           | pProdType add_op pSumType

 163  pProdType : type_composition
 164            | type_composition exp_op pProdType
 165            | type_composition mult_op pProdType

 166  type_composition : simpleBondiTypeList

 167  simpleBondiTypeList : simpleBondiType
 168                      | simpleBondiType simpleBondiTypeList

 169  simpleBondiType : type_id
 170                  | tyconstant classParams restParam
 171                  | LPAREN infix_op RPAREN
 172                  | LPAREN pType RPAREN
 173                  | REF simpleBondiType
 174                  | ARRAY simpleBondiType
 175                  | LIN simpleBondiType

 176  classParams : LESSTHAN typeCommaList GREATERTHAN
 177              |

 178  restParam : LBRACKET pType RBRACKET
 179            |

 180  typeCommaList : pType
 181                | pType COMMA typeCommaList

 182  datatype : opt_bar datatype_alternatives

 183  datatype_alternatives : datatype_alternative
 184                        | datatype_alternative BAR datatype_alternatives

 185  datatype_alternative : constructor_id
 186                       | constructor_id OF datatype_factors

 187  datatype_factors : datatype_factor
 188                   | datatype_factor AND datatype_factors

 189  datatype_factor : pType

 190  addCaseList : addCase
 191              | addCase AND addCaseList

 192  addCase : term_id PLUSEQUAL patternMatch
 193          | U_IDENT DOT L_IDENT PLUSEQUAL patternMatch

 194  opt_bar :
 195          | BAR

 196  type_id : L_IDENT

 197  tyconstant : U_IDENT

 198  type_constant_or_punct : tyconstant
 199                         | LPAREN infix_op RPAREN
 200                         | LPAREN type_constant_or_punct RPAREN

 201  term_id : L_IDENT
 202          | U_IDENT DOT L_IDENT

 203  constructor_id : U_IDENT

 204  exp_op : EXPOP

 205  mult_op : MULTOP
 206          | PERCENT

 207  add_op : ADDOP
 208         | MINUS

 209  misc_op : MISCOP

 210  rel_op : BOOL_AND
 211         | BOOL_OR
 212         | EQUALOP
 213         | GREATERTHAN
 214         | LESSTHAN
 215         | RELOP

 216  infix_op : add_op
 217           | exp_op
 218           | misc_op
 219           | mult_op
 220           | rel_op

 221  %entry% : '\001' parseShellAction
 222          | '\002' parseShellActionList
 223          | '\003' pTerm

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	.  error

	%entry%  goto 4


state 1
	%entry% : '\001' . parseShellAction  (221)

	DIRECTIVE_quit  shift 5
	DIRECTIVE_open  shift 6
	DIRECTIVE_hide  shift 7
	DIRECTIVE_show  shift 8
	DIRECTIVE_cd  shift 9
	DIRECTIVE_status  shift 10
	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CLASS  shift 19
	CPC  shift 20
	DATATYPE  shift 21
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 29
	LIN  shift 30
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	TYPE  shift 40
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	EOF  shift 51
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	parseShellAction  goto 54
	pTerm  goto 55
	shellAction  goto 56
	directive  goto 57
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 2
	%entry% : '\002' . parseShellActionList  (222)

	DIRECTIVE_quit  shift 5
	DIRECTIVE_open  shift 6
	DIRECTIVE_hide  shift 7
	DIRECTIVE_show  shift 8
	DIRECTIVE_cd  shift 9
	DIRECTIVE_status  shift 10
	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CLASS  shift 19
	CPC  shift 20
	DATATYPE  shift 21
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 29
	LIN  shift 30
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	TYPE  shift 40
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	EOF  shift 68
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	parseShellActionList  goto 69
	pTerm  goto 55
	shellAction  goto 70
	shellActionList  goto 71
	directive  goto 57
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 3
	%entry% : '\003' . pTerm  (223)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 73
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 4
	$accept : %entry% . $end  (0)

	$end  accept


state 5
	directive : DIRECTIVE_quit .  (24)

	.  reduce 24


state 6
	directive : DIRECTIVE_open . STRING  (26)

	STRING  shift 74
	.  error


state 7
	directive : DIRECTIVE_hide . L_IDENT  (23)

	L_IDENT  shift 75
	.  error


state 8
	directive : DIRECTIVE_show . L_IDENT  (22)

	L_IDENT  shift 76
	.  error


state 9
	directive : DIRECTIVE_cd . STRING  (21)

	STRING  shift 77
	.  error


state 10
	directive : DIRECTIVE_status .  (25)

	.  reduce 25


state 11
	simpleBondiTerm : STRING .  (102)

	.  reduce 102


state 12
	term_id : L_IDENT .  (201)

	.  reduce 201


13: shift/reduce conflict (shift 78, reduce 197) on DOT
13: shift/reduce conflict (shift 78, reduce 203) on DOT
state 13
	tyconstant : U_IDENT .  (197)
	term_id : U_IDENT . DOT L_IDENT  (202)
	constructor_id : U_IDENT .  (203)

	DOT  shift 78
	$end  reduce 203
	STRING  reduce 203
	L_IDENT  reduce 203
	U_IDENT  reduce 203
	INTEGER  reduce 203
	FLOAT  reduce 203
	CHARACTER  reduce 203
	WILDCARD  reduce 203
	AND  reduce 203
	AS  reduce 203
	BEGIN  reduce 203
	DO  reduce 203
	ELSE  reduce 203
	END  reduce 203
	EQCONS  reduce 203
	FALSE  reduce 203
	IN  reduce 203
	REFCONS  reduce 203
	SUPER  reduce 203
	THEN  reduce 203
	TO  reduce 203
	TRUE  reduce 203
	UN  reduce 203
	WHERE  reduce 203
	WITH  reduce 203
	BANG  reduce 203
	BAR  reduce 203
	BOOL_AND  reduce 203
	BOOL_OR  reduce 203
	COLON  reduce 203
	EQUAL  reduce 203
	EQUALOP  reduce 203
	GREATERTHAN  reduce 203
	LESSTHAN  reduce 203
	MINUS  reduce 203
	PERCENT  reduce 203
	RARROW  reduce 203
	ADDOP  reduce 203
	EXPOP  reduce 203
	MISCOP  reduce 203
	MULTOP  reduce 203
	OPER  reduce 203
	RELOP  reduce 203
	LPAREN  reduce 203
	RPAREN  reduce 203
	LBRACKET  reduce 203
	RBRACKET  reduce 203
	RBRACE  reduce 203
	COMMA  reduce 203
	SEMICOLON  reduce 203
	SEMISEMI  reduce 203


state 14
	simpleBondiTerm : INTEGER .  (99)

	.  reduce 99


state 15
	simpleBondiTerm : FLOAT .  (100)

	.  reduce 100


state 16
	simpleBondiTerm : CHARACTER .  (101)

	.  reduce 101


state 17
	simpleBondiTerm : WILDCARD .  (98)

	.  reduce 98


state 18
	simpleBondiTerm : BEGIN . pTerm END  (94)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 79
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 19
	shellAction : CLASS . tyconstant parameterCommaListOpt extendsOpt LBRACE attributeList WITH addCaseList RBRACE  (19)
	shellAction : CLASS . tyconstant parameterCommaListOpt extendsOpt LBRACE attributeList RBRACE  (20)

	U_IDENT  shift 80
	.  error

	tyconstant  goto 81


state 20
	process : CPC . compoundPattern RARROW pTerm  (117)

	STRING  shift 82
	L_IDENT  shift 83
	U_IDENT  shift 84
	INTEGER  shift 85
	FLOAT  shift 86
	CHARACTER  shift 87
	FALSE  shift 88
	TRUE  shift 89
	UN  shift 90
	CPCBIND  shift 91
	CPCPRO  shift 92
	LPAREN  shift 93
	.  error

	compoundPattern  goto 94
	datumPattern  goto 95
	namePattern  goto 96


state 21
	shellAction : DATATYPE . type_constant_or_punct simpleBondiTypeList EQUAL datatype WITH addCaseList SEMISEMI  (15)
	shellAction : DATATYPE . type_constant_or_punct EQUAL datatype WITH addCaseList SEMISEMI  (16)
	shellAction : DATATYPE . type_constant_or_punct simpleBondiTypeList EQUAL datatype SEMISEMI  (17)
	shellAction : DATATYPE . type_constant_or_punct EQUAL datatype SEMISEMI  (18)

	U_IDENT  shift 80
	LPAREN  shift 97
	.  error

	type_constant_or_punct  goto 98
	tyconstant  goto 99


state 22
	pTerm : ENTRY . LPAREN pTerm COMMA pTerm RPAREN  (78)

	LPAREN  shift 100
	.  error


state 23
	simpleBondiTerm : FALSE .  (104)

	.  reduce 104


state 24
	pTerm : FOR . term_id EQUAL pTerm TO pTerm DO pTerm  (80)

	L_IDENT  shift 12
	U_IDENT  shift 101
	.  error

	term_id  goto 102


state 25
	pTerm : FUN . simpleBondiTermList RARROW pTerm  (59)
	simpleBondiTermList : .  (90)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	FALSE  shift 23
	REFCONS  shift 35
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	BANG  shift 103
	LPAREN  shift 104
	LBRACKET  shift 53
	RARROW  reduce 90

	tyconstant  goto 58
	parameter  goto 59
	simpleBondiTermList  goto 105
	term_id  goto 106
	simpleBondiTerm  goto 107
	constructor_id  goto 67


state 26
	pTerm : GENERALISE . term_id  (69)

	L_IDENT  shift 12
	U_IDENT  shift 101
	.  error

	term_id  goto 108


state 27
	pTerm : IF . pTerm THEN pTerm ELSE pTerm  (58)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 109
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 28
	pTerm : LENGTHV . pTerm  (77)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 110
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 29
	shellAction : LET . binding SEMISEMI  (8)
	shellAction : LET . REC binding SEMISEMI  (10)
	shellAction : LET . EXT binding SEMISEMI  (11)
	shellAction : LET . METHOD binding SEMISEMI  (12)
	shellAction : LET . DISCONTINUOUS binding SEMISEMI  (13)
	pTerm : LET . bindingList IN pTerm  (60)
	pTerm : LET . REC binding IN pTerm  (61)
	pTerm : LET . EXT binding IN pTerm  (62)
	pTerm : LET . METHOD binding IN pTerm  (63)
	pTerm : LET . DISCONTINUOUS binding IN pTerm  (64)

	L_IDENT  shift 12
	U_IDENT  shift 101
	DISCONTINUOUS  shift 111
	EXT  shift 112
	METHOD  shift 113
	REC  shift 114
	LPAREN  shift 115
	.  error

	binding  goto 116
	bindingList  goto 117
	parameter  goto 118
	term_id  goto 106


state 30
	shellAction : LIN . binding SEMISEMI  (9)

	L_IDENT  shift 12
	U_IDENT  shift 101
	LPAREN  shift 115
	.  error

	binding  goto 119
	parameter  goto 118
	term_id  goto 106


state 31
	pTerm : MATCH . pTerm WITH pTerm  (66)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 120
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 32
	pTerm : NEW . tyconstant classParams  (75)

	U_IDENT  shift 80
	.  error

	tyconstant  goto 121


state 33
	pTerm : NEWARRAY . simpleBondiTerm simpleBondiTerm  (76)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	FALSE  shift 23
	REFCONS  shift 35
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	BANG  shift 103
	LPAREN  shift 104
	LBRACKET  shift 53
	.  error

	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 106
	simpleBondiTerm  goto 122
	constructor_id  goto 67


state 34
	process : REST . nameList IN process  (116)

	L_IDENT  shift 123
	.  error

	nameList  goto 124


state 35
	simpleBondiTerm : REFCONS .  (106)

	.  reduce 106


state 36
	pTerm : SLEEP . pTerm  (72)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 125
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 37
	pTerm : SPAWN . pTerm  (73)

	STRING  shift 11
	L_IDENT  shift 12
	U_IDENT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	CHARACTER  shift 16
	WILDCARD  shift 17
	BEGIN  shift 18
	CPC  shift 20
	ENTRY  shift 22
	FALSE  shift 23
	FOR  shift 24
	FUN  shift 25
	GENERALISE  shift 26
	IF  shift 27
	LENGTHV  shift 28
	LET  shift 72
	MATCH  shift 31
	NEW  shift 32
	NEWARRAY  shift 33
	REST  shift 34
	REFCONS  shift 35
	SLEEP  shift 36
	SPAWN  shift 37
	SUPER  shift 38
	TRUE  shift 39
	UN  shift 41
	VIEW  shift 42
	WHILE  shift 43
	ISREF  shift 44
	ISARRAY  shift 45
	BANG  shift 46
	BAR  shift 47
	MINUS  shift 48
	NOPER  shift 49
	OPER  shift 50
	LPAREN  shift 52
	LBRACKET  shift 53
	.  error

	pTerm  goto 126
	tyconstant  goto 58
	parameter  goto 59
	term_id  goto 60
	pInfixTerm  goto 61
	simpleBondiTerm  goto 62
	pRelTerm  goto 63
	patternMatchList  goto 64
	patternMatch  goto 65
	process  goto 66
	constructor_id  goto 67


state 38
	simpleBondiTerm : SUPER . DOT L_IDENT  (109)

	DOT  shift 127
	.  error


state 39
	simpleBondiTerm : TRUE .  (103)

	.  reduce 103


state 40
	shellAction : TYPE . typeBinding SEMISEMI  (14)

	U_IDENT  shift 80
	LPAREN  shift 97
	.  error

	typeBinding  goto 128
	type_constant_or_punct  goto 129
	tyconstant  goto 99


state 41
	simpleBondiTerm : UN .  (105)

	.  reduce 105


state 42
	pTerm : VIEW . LPAREN pTerm COMMA pTerm RPAREN  (82)

	LPAREN  shift 130
	.  error


state 43
	pTerm : WHILE . pTerm DO pTerm  (79)
